--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@
     resize: none;
     font-size: 1.4rem;
     font-weight: 400;
-    line-height: 1.4rem;
+    line-height: 1.4;
     letter-spacing: -0.06rem;
     color: var(--clr-neutral-700);
     outline: none;
