--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@
     gap: var(--spacing-40);
     max-width: 99rem;
     margin: var(--spacing-16) var(--spacing-16) var(--spacing-32);
+
+    @media (min-width: 48em) {
+      margin-inline: var(--spacing-32);
+    }
   }
 
   .visually-hidden {
@@ -135,7 +139,6 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    /* padding-block-end: var(--spacing-16); */
   }
 
   .navigation__logo {
@@ -145,6 +148,11 @@
 
     @media (prefers-color-scheme: dark) {
       background: url(./images/logo-dark-theme.svg) no-repeat center/contain;
+    }
+
+    @media (min-width: 48em) {
+      width: 24.5rem;
+      height: 4rem;
     }
   }
 
@@ -156,6 +164,10 @@
 
     @media (prefers-color-scheme: dark) {
       background-color: var(--clr-neutral-700);
+    }
+
+    @media (min-width: 48em) {
+      padding: 1.1rem;
     }
 
     &:hover {
@@ -170,6 +182,11 @@
     @media (prefers-color-scheme: dark) {
       background: url(./images/icon-sun.svg) no-repeat center/contain;
     }
+
+    @media (min-width: 48em) {
+      width: 2.2rem;
+      height: 2.2rem;
+    }
   }
 
   .heading {
@@ -178,6 +195,11 @@
     letter-spacing: -0.1rem;
     text-align: center;
     text-wrap: auto;
+
+    @media (min-width: 48em) {
+      font-size: 6.4rem;
+      text-wrap: balance;
+    }
   }
 
   .main {
@@ -202,6 +224,11 @@
     color: var(--clr-neutral-700);
     outline: none;
 
+    @media (min-width: 48em) {
+      font-size: 2rem;
+      padding: var(--spacing-20);
+    }
+
     &::placeholder {
       font-size: inherit;
       font-weight: inherit;
@@ -225,12 +252,34 @@
     grid-template-columns: 1fr;
     row-gap: var(--spacing-12);
 
+    @media (min-width: 26.5em) {
+      display: flex;
+      flex-flow: row wrap;
+      gap: var(--spacing-24);
+      align-items: center;
+    }
+
+    @media (min-width: 48em) {
+      p {
+        margin-inline-start: auto;
+      }
+    }
+
     div {
       display: flex;
       flex-flow: row nowrap;
       align-items: center;
       gap: 1rem;
       height: 2.1rem;
+    }
+
+    label,
+    p {
+      font-size: 1.6rem;
+      line-height: 1.3;
+      font-weight: 400;
+      color: var(--clr-neutral-900);
+      letter-spacing: -0.06rem;
     }
 
     div input[type="checkbox"] {
@@ -305,6 +354,12 @@
       height: 13rem;
       overflow: hidden;
 
+      @media (min-width: 48em) {
+        height: 15rem;
+        padding-block: var(--spacing-16);
+        padding-inline: var(--spacing-12);
+      }
+
       &::after {
         content: "";
         position: absolute;
@@ -312,6 +367,10 @@
         right: -5rem;
         width: 15rem;
         height: 15rem;
+
+        @media (min-width: 48em) {
+          top: 0;
+        }
       }
 
       &:nth-of-type(1) {
@@ -357,6 +416,10 @@
     font-weight: 700;
     letter-spacing: -0.1rem;
     color: var(--clr-neutral-900);
+
+    @media (min-width: 48em) {
+      font-size: 6.4rem;
+    }
   }
 
   .result__progress-bars {
