--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@
     border-radius: var(--radius-12);
     padding: var(--spacing-12);
     resize: none;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.4;
     letter-spacing: -0.06rem;
@@ -370,6 +370,7 @@
 
         @media (min-width: 48em) {
           top: 0;
+          righy: -6rem;
         }
       }
 
