--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
     --radius-16: 1.6rem;
     --radius-20: 2rem;
     --radius-24: 2.4rem;
-    --radius-full: 100%;
+    --radius-full: 99rem;
   }
 }
 
@@ -434,5 +434,37 @@
       line-height: 1.3;
       letter-spacing: -0.1rem;
     }
+  }
+
+  .progress {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+    gap: 1.2rem 1.4rem;
+
+    & p {
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.3;
+      color: var(--clr-neutral-900);
+      letter-spacing: -0.06rem;
+    }
+  }
+
+  progress[value] {
+    width: 100%;
+    height: 1.2rem;
+    -webkit-appearance: none;
+    appearance: none;
+  }
+
+  progress[value]::-webkit-progress-bar {
+    background-color: var(--clr-neutral-100);
+    border-radius: var(--radius-full);
+  }
+
+  progress[value]::-webkit-progress-value {
+    background-color: var(--clr-purple-400);
+    border-radius: var(--radius-full);
   }
 }
