--- a/style.css
+++ b/style.css
@@ -468,6 +468,9 @@
     -moz-appearance: none;
     appearance: none;
     border: none;
+    background-color: var(--clr-neutral-100); /* Firefox fallback */
+    border-radius: var(--radius-full);
+    overflow: hidden; /* for rounded ends in Firefox */
   }
 
   progress[value]::-webkit-progress-bar {
@@ -476,6 +479,11 @@
   }
 
   progress[value]::-webkit-progress-value {
+    background-color: var(--clr-purple-400);
+    border-radius: var(--radius-full);
+  }
+  /* Firefox */
+  progress[value]::-moz-progress-bar {
     background-color: var(--clr-purple-400);
     border-radius: var(--radius-full);
   }
