--- a/style.css
+++ b/style.css
@@ -444,6 +444,35 @@
       line-height: 1.3;
       letter-spacing: -0.1rem;
     }
+
+    .no-characters {
+      font-size: 1.6rem;
+      font-weight: 400;
+      color: var(--clr-neutral-600);
+      line-height: 1.3;
+      letter-spacing: -0.06rem;
+    }
+
+    .see-more {
+      font-size: 2rem;
+      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: -0.06rem;
+      color: var(--clr-neutral-900);
+      margin-inline-end: var(--spacing-8);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .chevron {
+      margin-inline-start: var(--spacing-8);
+      width: 2rem;
+      height: 2rem;
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 
   .progress {
@@ -473,6 +502,7 @@
     overflow: hidden; /* for rounded ends in Firefox */
   }
 
+  /* Chrome, Safari, Edge */
   progress[value]::-webkit-progress-bar {
     background-color: var(--clr-neutral-100);
     border-radius: var(--radius-full);
