--- a/style.css
+++ b/style.css
@@ -39,6 +39,22 @@
     --radius-20: 2rem;
     --radius-24: 2.4rem;
     --radius-full: 99rem;
+
+    --bg-theme: url(./images/bg-light-theme.png);
+    --logo: url(./images/logo-light-theme.svg);
+    --switch-btn: url(./images/icon-moon.svg);
+  }
+
+  :root[data-theme="light"] {
+    --bg-theme: url(./images/bg-light-theme.png);
+    --logo: url(./images/logo-light-theme.svg);
+    --switch-btn: url(./images/icon-moon.svg);
+  }
+
+  :root[data-theme="dark"] {
+    --bg-theme: url(./images/bg-dark-theme.png);
+    --logo: url(./images/logo-dark-theme.svg);
+    --switch-btn: url(./images/icon-sun.svg);
   }
 }
 
@@ -64,11 +80,19 @@
     color-scheme: light dark;
   }
 
+  html[data-theme="light"] {
+    color-scheme: light;
+  }
+
+  html[data-theme="dark"] {
+    color-scheme: dark;
+  }
+
   body {
     font-family: "DM Sans", sans-serif;
     line-height: 1;
     background-color: light-dark(var(--clr-neutral), var(--clr-neutral-900));
-    background: url(./images/bg-light-theme.png) no-repeat center/cover;
+    background: var(--bg-theme) no-repeat center/cover;
 
     @media (prefers-color-scheme: dark) {
       background: url(./images/bg-dark-theme.png) no-repeat center/cover;
@@ -151,7 +175,7 @@
   .navigation__logo {
     width: 20rem;
     height: 3rem;
-    background: url(./images/logo-light-theme.svg) no-repeat center/contain;
+    background: var(--logo) no-repeat center/contain;
 
     @media (prefers-color-scheme: dark) {
       background: url(./images/logo-dark-theme.svg) no-repeat center/contain;
@@ -168,6 +192,10 @@
     border: none;
     padding: var(--spacing-6);
     border-radius: var(--radius-6);
+    background-color: light-dark(
+      var(--clr-neutral-100),
+      var(--clr-neutral-700)
+    );
 
     @media (prefers-color-scheme: dark) {
       background-color: var(--clr-neutral-700);
@@ -184,7 +212,7 @@
   .navigation__switch {
     width: 2rem;
     height: 2rem;
-    background: url(./images/icon-moon.svg) no-repeat center/contain;
+    background: var(--switch-btn) no-repeat center/contain;
 
     @media (prefers-color-scheme: dark) {
       background: url(./images/icon-sun.svg) no-repeat center/contain;
@@ -202,7 +230,7 @@
     letter-spacing: -0.1rem;
     text-align: center;
     text-wrap: auto;
-    color: var(--clr-neutral-900);
+    color: light-dark(var(--clr-neutral-900), var(--clr-neutral-100));
 
     @media (min-width: 48em) {
       font-size: 6.4rem;
@@ -223,9 +251,13 @@
   .main__text {
     width: 100%;
     height: 20rem;
-    background-color: var(--clr-neutral-100);
+    background-color: light-dark(
+      var(--clr-neutral-100),
+      var(--clr-neutral-800)
+    );
     border: none;
-    box-shadow: inset 0 0 0 2px var(--clr-neutral-200);
+    box-shadow: inset 0 0 0 2px
+      light-dark(var(--clr-neutral-200), var(--clr-neutral-700));
     border-radius: var(--radius-12);
     padding: var(--spacing-12);
     resize: none;
@@ -233,7 +265,7 @@
     font-weight: 400;
     line-height: 1.4;
     letter-spacing: -0.06rem;
-    color: var(--clr-neutral-700);
+    color: light-dark(var(--clr-neutral-700), var(--clr-neutral-200));
     outline: none;
 
     &::placeholder {
@@ -242,15 +274,23 @@
       color: inherit;
     }
 
+    &:hover {
+      background-color: light-dark(
+        var(--clr-neutral-200),
+        var(--clr-neutral-700)
+      );
+      cursor: pointer;
+      box-shadow: inset 0 0 0 2px
+        light-dark(var(--clr-neutral-100), var(--clr-neutral-600));
+    }
+
     &:focus {
       box-shadow: inset 0 0 0 2px var(--clr-purple-500);
       filter: drop-shadow(0 0 2px var(--clr-purple-400));
-      background-color: var(--clr-neutral-200);
-    }
-
-    &:hover {
-      background-color: var(--clr-neutral-200);
-      cursor: pointer;
+      background-color: light-dark(
+        var(--clr-neutral-200),
+        var(--clr-neutral-700)
+      );
     }
 
     @media (min-width: 48em) {
@@ -305,7 +345,7 @@
       font-size: 1.6rem;
       line-height: 1.3;
       font-weight: 400;
-      color: var(--clr-neutral-900);
+      color: light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
       letter-spacing: -0.06rem;
 
       @media (prefers-color-scheme: dark) {
@@ -321,7 +361,8 @@
       width: 1.6rem;
       height: 1.6rem;
       border: none;
-      box-shadow: inset 0 0 0 1px var(--clr-neutral-900);
+      box-shadow: inset 0 0 0 1px
+        light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
       border-radius: var(--radius-4);
 
       &:checked::after {
@@ -365,6 +406,7 @@
       font-size: 1.4rem;
       font-weight: 400;
       letter-spacing: -0.06rem;
+      background-color: light-dark(transparent, transparent);
 
       @media (prefers-color-scheme: dark) {
         background-color: transparent;
@@ -475,7 +517,7 @@
       font-weight: 600;
       line-height: 1.3;
       letter-spacing: -0.1rem;
-      color: var(--clr-neutral-900);
+      color: light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
 
       @media (prefers-color-scheme: dark) {
         color: var(--clr-neutral-200);
@@ -485,7 +527,7 @@
     .no-characters {
       font-size: 1.6rem;
       font-weight: 400;
-      color: var(--clr-neutral-600);
+      color: light-dark(var(--clr-neutral-600), var(--clr-neutral-200));
       line-height: 1.3;
       letter-spacing: -0.06rem;
 
@@ -499,7 +541,7 @@
       font-weight: 400;
       line-height: 1.4;
       letter-spacing: -0.06rem;
-      color: var(--clr-neutral-900);
+      color: light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
       margin-inline-end: var(--spacing-8);
 
       &:hover {
@@ -517,6 +559,7 @@
       height: 2rem;
       display: inline-block;
       vertical-align: middle;
+      fill: light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
 
       @media (prefers-color-scheme: dark) {
         fill: var(--clr-neutral-200);
@@ -534,7 +577,7 @@
       font-size: 1.6rem;
       font-weight: 400;
       line-height: 1.3;
-      color: var(--clr-neutral-900);
+      color: light-dark(var(--clr-neutral-900), var(--clr-neutral-200));
       letter-spacing: -0.06rem;
 
       @media (prefers-color-scheme: dark) {
@@ -550,7 +593,10 @@
     -moz-appearance: none;
     appearance: none;
     border: none;
-    background-color: var(--clr-neutral-100); /* Firefox fallback */
+    background-color: light-dark(
+      var(--clr-neutral-100),
+      var(--clr-neutral-800)
+    ); /* Firefox fallback */
     border-radius: var(--radius-full);
     overflow: hidden; /* for rounded ends in Firefox */
 
@@ -561,7 +607,10 @@
 
   /* Chrome, Safari, Edge */
   progress[value]::-webkit-progress-bar {
-    background-color: var(--clr-neutral-100);
+    background-color: light-dark(
+      var(--clr-neutral-100),
+      var(--clr-neutral-800)
+    );
     border-radius: var(--radius-full);
 
     @media (prefers-color-scheme: dark) {
