--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@layer variables, reset, layout, utilities;
+
 @layer variables {
   :root {
     --clr-neutral-900: #12131a;
@@ -190,6 +192,15 @@
     white-space: nowrap;
     width: 1px;
   }
+
+  [hidden] {
+    display: none;
+  }
+
+  .error {
+    box-shadow: inset 0 0 0 1px var(--clr-orange-800);
+    filter: drop-shadow(0 0 8px var(--clr-orange-800));
+  }
 }
 
 @layer layout {
@@ -286,7 +297,7 @@
 
     &:focus {
       box-shadow: inset 0 0 0 2px var(--clr-purple-500);
-      filter: drop-shadow(0 0 2px var(--clr-purple-400));
+      filter: drop-shadow(0 0 8px var(--clr-purple-400));
       background-color: var(--main-text-bg-focus);
     }
 
@@ -294,6 +305,22 @@
       font-size: 2rem;
       padding: var(--spacing-20);
     }
+  }
+
+  .error__box {
+    display: flex;
+    flex-flow: row wrap;
+    gap: var(--spacing-8);
+    align-items: center;
+    margin-block-start: -0.4rem;
+  }
+
+  .error__text {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.3;
+    letter-spacing: -0.06rem;
+    color: var(--clr-orange-800);
   }
 
   .main__filters {
